cabal-version:       >=1.10
name:                pandoc-link-context
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sridhar Ratnakumar
maintainer:          srid@srid.ca
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable pandoc-link-context
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
