cabal-version:      >=1.10
name:               pandoc-link-context
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Text.Pandoc.LinkContext
  build-depends:    base
