cabal-version:      3.0
name:               pandoc-link-context
version:            0.9.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sridhar Ratnakumar
maintainer:         srid@srid.ca
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  exposed-modules:    Text.Pandoc.LinkContext
  build-depends:
      base
    , containers
    , pandoc-types
    , relude        >=0.7.0.0
    , text

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Extra)

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
